Upgraded minimum Java SE version from 11 to 17.